--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="./static/css/style.css">
-    <title>A.M. | Home</title>
+    <title>A.M. | Portfolio</title>
 </head>
 
 <body>
@@ -16,118 +16,9 @@
     <!-- HEADER-->
 
     <header class="d-flex align-items-center justify-content-center position-relative">
-        <h1 class="text-uppercase text-white text-center position-relative"><small>Welcome to<br></small>my page</h1>
-        <a href="#nav" class="arrow"></a>
+        <h1 class="text-uppercase text-white text-center position-relative"><small>Welcome to<br></small>my portfolio</h1>
+        <a href="#work" class="arrow"></a>
     </header>
-
-    <!-- NAVBAR -->
-
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top text-uppercase" id="nav">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">A.M.</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="index.html#about">About</a>
-                    <a class="nav-link" href="index.html#work">My work</a>
-                    <a class="nav-link" href="contact.html">Contact</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <!-- ABOUT -->
-
-    <section id="about">
-        <div class="container my-5 text-center">
-
-            <div class="row mb-5 text-uppercase">
-                <div class="col">
-                    <h2>About me</h2>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col-12 col-md-6 pt-3">
-                    <img src="./static/images/about.jpg" width="200px" class="rounded-circle mb-3 hover-noshadow"
-                        alt="">
-                    <p>Hi! My name is Artjoms and I'm beginner web developer.<br>
-                        As well I'm part time student in Riga Technical university studying electronics and
-                        telecomunication. Also I have passion to technology and sport, especially gym.</p>
-
-                </div>
-
-                <div class="col-12 col-md-6">
-                    <h4>My skills</h4>
-
-                    <p class="m-0 pt-4" class="m-0">HTML</p>
-                    <div class="skill">
-                        <div class="text-right py-1 text-white" id="html">80%&nbsp;</div>
-                    </div>
-                    <p class="m-0 pt-3">CSS</p>
-                    <div class="skill">
-                        <div class="text-right py-1 text-white" id="css">70%&nbsp;</div>
-                    </div>
-                    <p class="m-0 pt-3">Bootstrap</p>
-                    <div class="skill">
-                        <div class="text-right py-1 text-white" id="bootstrap">70%&nbsp;</div>
-                    </div>
-                    <p class="m-0 pt-3">PHP</p>
-                    <div class="skill">
-                        <div class="text-right py-1 text-white" id="php">7%&nbsp;</div>
-                    </div>
-                    <p class="m-0 pt-3">JavaScript</p>
-                    <div class="skill">
-                        <div class="text-right py-1 text-white" id="js">5%&nbsp;</div>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-
-    <!-- QUOTES -->
-
-    <section class="container-fluid bg-gray pt-5 pb-3">
-        <div class="container">
-
-            <div class="row text-center text-uppercase mb-5">
-                <div class="col">
-                    <h2>Favourite quotes</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <q class="d-block w-100 text-center font-italic">You can do anything you set your mind
-                                    to.</q>
-                                <p class="text-center pb-5 pl-5">&mdash; Benjamin Franklin</p>
-                            </div>
-                            <div class="carousel-item">
-                                <q class="d-block text-center font-italic">Do not put all your eggs in one basket.</q>
-                                <p class="text-center pb-5 pl-5">&mdash; Warren Buffet</p>
-                            </div>
-                            <div class="carousel-item">
-                                <q class="d-block text-center font-italic">A person who never made a mistake never tried
-                                    anything new.</q>
-                                <p class="text-center pb-5 pl-5">&mdash; Albert Einstein</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- WORK -->
 
@@ -175,34 +66,18 @@
         </div>
     </section>
 
-    <!-- CONTACT -->
-
-    <section class="container-fluid bg-gray py-5">
-        <div class="container">
-            <div class="row text-center text-uppercase">
-                <div class="col">
-                    <a href="./contact.html" class="text-decoration-none text-body text-uppercase">
-                        <h3 id="contact">Contact</h3>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- FOOTER -->
     <footer class="container-fluid bg-dark pt-5">
         <div class="container">
             <div class="row d-flex justify-content-center">
-                <a href="index.html" class="text-decoration-none text-white">
+                <a href="#" class="text-decoration-none text-white">
                     <h4>A.M.</h4>
                 </a>
             </div>
             <div class="row d-flex justify-content-around">
                 <ul class="list-unstyled d-flex my-3">
-                    <li><a href="index.html" class="text-white pr-2">Home</a></li>
-                    <li><a href="https://www.facebook.com" class="text-white px-2">Facebook</a></li>
-                    <li><a href="https://www.linkedin.com" class="text-white px-2">LinkedIn</a></li>
-                    <li><a href="contact.html" class="text-white pl-2">Contact</a></li>
+                    <li><a href="https://www.github.com/ArtjomsM" class="text-white px-2">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/ArtjomsM" class="text-white px-2">LinkedIn</a></li>
                 </ul>
             </div>
             <div class="row d-flex justify-content-center mt-4">
@@ -210,28 +85,6 @@
             </div>
         </div>
     </footer>
-
-
-    <!-- TO TOP -->
-    <div class="container">
-        <div class="row position-relative">
-            <div class="col">
-                <a href="#" id="to-top" style="display: none;"></a>
-            </div>
-        </div>
-    </div>
-
-
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
-    <script src="./static/js/script.js"></script>
 
 </body>
 
