--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,8 @@
     <!-- HEADER-->
 
     <header class="d-flex align-items-center justify-content-center position-relative">
-        <h1 class="text-uppercase text-white text-center position-relative"><small>Welcome to<br></small>my portfolio</h1>
+        <h1 class="text-uppercase text-white text-center position-relative"><small>Welcome to<br></small>my portfolio
+        </h1>
         <a href="#work" class="arrow"></a>
     </header>
 
@@ -43,19 +44,20 @@
                 </div>
                 <div class="col-10 offset-1 offset-md-0 col-md-4 pb-3">
                     <div class="p-2 border hover-shadow">
-                        <a href="https://artjomsm.github.io/viva/site/" target="_blank"><img src="./static/images/viva.png"
-                                alt="MoGo website" width="100%"></a>
-                        <h4 class="pt-2"><a href="https://artjomsm.github.io/viva/site/" target="_blank" class="text-body">Viva</a>
+                        <a href="https://artjomsm.github.io/viva/site/" target="_blank"><img
+                                src="./static/images/viva.png" alt="MoGo website" width="100%"></a>
+                        <h4 class="pt-2"><a href="https://artjomsm.github.io/viva/site/" target="_blank"
+                                class="text-body">Viva</a>
                         </h4>
-                        <p>Front page for fictional travel agency- Viva. Bootstrap components are used in design. And
-                            bootstrap is used to position elements. </p>
+                        <p>Front page for fictional travel agency- Viva. Bootstrap components are used in design as well
+                            as bootstrap is used to position elements. </p>
                         <p class="font-weight-bold">HTML, CSS, Bootstrap, JS</p>
                     </div>
                 </div>
                 <div class="col-10 offset-1 offset-md-0 col-md-4">
                     <div class="p-2 border hover-shadow">
-                        <a href="https://artjomsm.github.io/binary/site/" target="_blank"><img src="./static/images/binary.png"
-                                alt="MoGo website" width="100%"></a>
+                        <a href="https://artjomsm.github.io/binary/site/" target="_blank"><img
+                                src="./static/images/binary.png" alt="MoGo website" width="100%"></a>
                         <h4 class="pt-2"><a href="https://artjomsm.github.io/binary/site/" target="_blank"
                                 class=" text-body">Binary</a></h4>
                         <p>Landing page for fictional site named Binary. Design uses bootstraps responsive layout.</p>
