--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="./static/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>A.M. | Portfolio</title>
 </head>
 
@@ -34,7 +34,7 @@
                 <div class="col-10 offset-1 offset-md-0 col-md-4 pb-3">
                     <div class="p-2 border hover-shadow">
                         <a href="https://artjomsm.github.io/mogo/site/" target="_blank"><img
-                                src="./static/images/mogo.png" alt="MoGo website" width="100%"></a>
+                                src="./images/mogo.png" alt="MoGo website" width="100%"></a>
                         <h4 class="pt-2"><a href="https://artjomsm.github.io/mogo/site/" target="_blank"
                                 class="text-body">MoGo</a></h4>
                         <p>Front page for fictional site that uses bootstraps responsive layout and flexbox to position
@@ -45,7 +45,7 @@
                 <div class="col-10 offset-1 offset-md-0 col-md-4 pb-3">
                     <div class="p-2 border hover-shadow">
                         <a href="https://artjomsm.github.io/viva/site/" target="_blank"><img
-                                src="./static/images/viva.png" alt="MoGo website" width="100%"></a>
+                                src="./images/viva.png" alt="Viva website" width="100%"></a>
                         <h4 class="pt-2"><a href="https://artjomsm.github.io/viva/site/" target="_blank"
                                 class="text-body">Viva</a>
                         </h4>
@@ -57,7 +57,7 @@
                 <div class="col-10 offset-1 offset-md-0 col-md-4">
                     <div class="p-2 border hover-shadow">
                         <a href="https://artjomsm.github.io/binary/site/" target="_blank"><img
-                                src="./static/images/binary.png" alt="MoGo website" width="100%"></a>
+                                src="./images/binary.png" alt="Binary website" width="100%"></a>
                         <h4 class="pt-2"><a href="https://artjomsm.github.io/binary/site/" target="_blank"
                                 class=" text-body">Binary</a></h4>
                         <p>Landing page for fictional site named Binary. Design uses bootstraps responsive layout.</p>
