--- a/site/index.html
+++ b/site/index.html
@@ -33,8 +33,8 @@
             <div class="row">
                 <div class="col-10 offset-1 offset-md-0 col-md-4 pb-3">
                     <div class="p-2 border hover-shadow">
-                        <a href="https://artjomsm.github.io/mogo/site/" target="_blank"><img
-                                src="./images/mogo.png" alt="MoGo website" width="100%"></a>
+                        <a href="https://artjomsm.github.io/mogo/site/" target="_blank"><img src="./images/mogo.png"
+                                alt="MoGo website" width="100%"></a>
                         <h4 class="pt-2"><a href="https://artjomsm.github.io/mogo/site/" target="_blank"
                                 class="text-body">MoGo</a></h4>
                         <p>Front page for fictional site that uses bootstraps responsive layout and flexbox to position
@@ -44,8 +44,8 @@
                 </div>
                 <div class="col-10 offset-1 offset-md-0 col-md-4 pb-3">
                     <div class="p-2 border hover-shadow">
-                        <a href="https://artjomsm.github.io/viva/site/" target="_blank"><img
-                                src="./images/viva.png" alt="Viva website" width="100%"></a>
+                        <a href="https://artjomsm.github.io/viva/site/" target="_blank"><img src="./images/viva.png"
+                                alt="Viva website" width="100%"></a>
                         <h4 class="pt-2"><a href="https://artjomsm.github.io/viva/site/" target="_blank"
                                 class="text-body">Viva</a>
                         </h4>
@@ -56,8 +56,8 @@
                 </div>
                 <div class="col-10 offset-1 offset-md-0 col-md-4">
                     <div class="p-2 border hover-shadow">
-                        <a href="https://artjomsm.github.io/binary/site/" target="_blank"><img
-                                src="./images/binary.png" alt="Binary website" width="100%"></a>
+                        <a href="https://artjomsm.github.io/binary/site/" target="_blank"><img src="./images/binary.png"
+                                alt="Binary website" width="100%"></a>
                         <h4 class="pt-2"><a href="https://artjomsm.github.io/binary/site/" target="_blank"
                                 class=" text-body">Binary</a></h4>
                         <p>Landing page for fictional site named Binary. Design uses bootstraps responsive layout.</p>
@@ -80,6 +80,7 @@
                 <ul class="list-unstyled d-flex my-3">
                     <li><a href="https://www.github.com/ArtjomsM" class="text-white px-2">GitHub</a></li>
                     <li><a href="https://www.linkedin.com/in/ArtjomsM" class="text-white px-2">LinkedIn</a></li>
+                    <li><a href="mailto:artjoms.minejevs@gmail.com" class="text-white px-2">E-mail</a></li>
                 </ul>
             </div>
             <div class="row d-flex justify-content-center mt-4">
