--- a/site/index.html
+++ b/site/index.html
@@ -31,6 +31,16 @@
                 </div>
             </div>
             <div class="row">
+                <div class="col-10 offset-1 offset-md-0 col-md-4">
+                    <div class="p-2 border hover-shadow">
+                        <a href="http://artjomsm.com" target="_blank"><img src="./images/blog.png"
+                                alt="My blog website" width="100%"></a>
+                        <h4 class="pt-2"><a href="http://artjomsm.com" target="_blank"
+                                class=" text-body">Blog</a></h4>
+                        <p>Blog created using Laravel. One user can create posts. Posts, comments, contact form and emails goes to database. Responsive design created using Bootstrap.</p>
+                        <p class="font-weight-bold">Laravel, PHP, MySQL, Bootstrap, HTML</p>
+                    </div>
+                </div>
                 <div class="col-10 offset-1 offset-md-0 col-md-4 pb-3">
                     <div class="p-2 border hover-shadow">
                         <a href="https://artjomsm.github.io/mogo/site/" target="_blank"><img src="./images/mogo.png"
@@ -52,16 +62,6 @@
                         <p>Front page for fictional travel agency- Viva. Bootstrap components are used in design as well
                             as bootstrap is used to position elements. </p>
                         <p class="font-weight-bold">HTML, CSS, Bootstrap, JS</p>
-                    </div>
-                </div>
-                <div class="col-10 offset-1 offset-md-0 col-md-4">
-                    <div class="p-2 border hover-shadow">
-                        <a href="https://artjomsm.github.io/binary/site/" target="_blank"><img src="./images/binary.png"
-                                alt="Binary website" width="100%"></a>
-                        <h4 class="pt-2"><a href="https://artjomsm.github.io/binary/site/" target="_blank"
-                                class=" text-body">Binary</a></h4>
-                        <p>Landing page for fictional site named Binary. Design uses bootstraps responsive layout.</p>
-                        <p class="font-weight-bold">HTML, CSS, Bootstrap</p>
                     </div>
                 </div>
             </div>
