--- a/site/index.html
+++ b/site/index.html
@@ -37,7 +37,7 @@
                                 alt="My blog website" width="100%"></a>
                         <h4 class="pt-2"><a href="http://artjomsm.com" target="_blank"
                                 class=" text-body">Blog</a></h4>
-                        <p>Blog created using Laravel. One user can create posts. Posts, comments, contact form and emails goes to database. Responsive design created using Bootstrap.</p>
+                        <p>Blog created using Laravel. One user can add new posts. All data, posts, comments, contact form and emails goes to database. Responsive design created using Bootstrap.</p>
                         <p class="font-weight-bold">Laravel, PHP, MySQL, Bootstrap, HTML</p>
                     </div>
                 </div>
