--- a/site/index.html
+++ b/site/index.html
@@ -33,11 +33,17 @@
             <div class="row">
                 <div class="col-10 offset-1 offset-md-0 col-md-4">
                     <div class="p-2 border hover-shadow">
-                        <a href="http://artjomsm.com" target="_blank"><img src="./images/blog.png"
-                                alt="My blog website" width="100%"></a>
-                        <h4 class="pt-2"><a href="http://artjomsm.com" target="_blank"
-                                class=" text-body">Blog</a></h4>
-                        <p>Blog created using Laravel. One user can add new posts. All data, posts, comments, contact form and emails goes to database. Responsive design created using Bootstrap.</p>
+                        <a href="http://artjomsm.com" target="_blank"><img src="./images/blog.png" alt="My blog website"
+                                width="100%"></a>
+                        <h4 class="pt-2"><a href="http://artjomsm.com" target="_blank" class=" text-body">Blog</a></h4>
+                        <p>Simple blog created using Laravel. Only admin can add new posts and delte them. On home page
+                            recent posts are shown, if there are more than 9,
+                            appears button all posts. Posts can be sorted by date they are created. ALso all posts have
+                            topics and they can be filtered to show only posts about specific one topic. On single post
+                            page it
+                            is possible to write comments. All data sent using forms is sent to database. Responsive
+                            design created using
+                            Bootstrap.</p>
                         <p class="font-weight-bold">Laravel, PHP, MySQL, Bootstrap, HTML</p>
                     </div>
                 </div>
